--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ html {
 
 .navbar-glass {
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px); /* Safari support */
     background-color: rgba(255, 255, 255, 0.26);
     box-shadow: 0 8px 24px rgba(0, 0, 0, 0.208);
     /* border-bottom: 1px solid rgba(255, 255, 255, 0.241); */
