--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ html {
 
 /* footer background */
 .footer-home {
-    background-image: url("pic/blue.jpg");
+    background-image: url("pic/blue.webp");
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -102,7 +102,7 @@ html {
 /* main background color */
 #home {
     /* background-color: rgb(211, 211, 211); */
-    background-image: url("pic/bg.jpg");
+    background-image: url("pic/bg.webp");
     height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -142,7 +142,7 @@ html {
 
 /* group of cards background, corner and shadow */
 .cards {
-    background-image: url("pic/gradient.jpg");
+    background-image: url("pic/gradient.webp");
     height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
